Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -108,14 +108,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "italy = none "
+   ]
   },
   {
    "cell_type": "markdown",
