--- a/index.ipynb
+++ b/index.ipynb
@@ -105,11 +105,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "italy = none "
+    "italy = None"
    ]
   },
   {
