--- a/index.ipynb
+++ b/index.ipynb
@@ -612,36 +612,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'Argentina',\n",
-       " 'Canada',\n",
-       " 'Croatia',\n",
-       " 'Finland',\n",
-       " 'Italy',\n",
-       " 'Malta',\n",
-       " 'Mexico',\n",
-       " 'Morocco',\n",
-       " 'New Mexico',\n",
-       " 'USA'}"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "unique_countries = list"
+    "unique_countries = list(countries)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -650,7 +630,7 @@
        "12"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -661,16 +641,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "10"
+       "12"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
