--- a/index.ipynb
+++ b/index.ipynb
@@ -593,10 +593,10 @@
        " 'Croatia',\n",
        " 'Finland',\n",
        " 'Italy',\n",
-       " 'Malta',\n",
        " 'Mexico',\n",
        " 'Morocco',\n",
        " 'New Mexico',\n",
+       " 'South Korea',\n",
        " 'USA'}"
       ]
      },
@@ -612,7 +612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -621,7 +621,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -630,7 +630,7 @@
        "12"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -641,7 +641,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -650,7 +650,7 @@
        "12"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
